# backsocial

./: .env.example  .gitignore  CUIDADO_COMPUTADORA.md  DEPLOYMENT_BACKEND.md  DEPLOY_VERCEL.md  GUIA_COPIAR_PROYECTO.md  README.md  README_API.md  SETUP_CLEAN_DATABASE.md  SETUP_LOCAL_BACKEND.md  analyzer.py  api.py  app.py  check_duplicate_comments.py  clean_duplicate_comments.py  config.py  db_utils.py  importar-apify-comentarios.ps1  importar-apify-run.ps1  importar-todos-comentarios.ps1  pdf_generator.py  preparar-para-copiar.bat  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  scraper.py  start-backend.bat  topic_analyzer.py  utils.py
